@@ -34,7 +34,7 @@
  *                mode * -p etc. if flag was clear
  *
  *
- * $Id: channel.c,v 1.167 1999/09/08 01:52:57 lusky Exp $
+ * $Id: channel.c,v 1.168 1999/10/10 01:30:27 lusky Exp $
  */
 #include "channel.h"
 #include "client.h"
@@ -1774,8 +1774,6 @@ void set_channel_mode(struct Client *cptr,
 
           break;
 
-
-
         case 'l':
           if (whatt == MODE_QUERY)
             break;
@@ -1799,7 +1797,7 @@ void set_channel_mode(struct Client *cptr,
               arg = check_string(*parv++);
               /*              if (MyClient(sptr) && opcnt >= MAXMODEPARAMS)
                 break; */
-              if (!(nusers = atoi(arg)))
+              if ((nusers = atoi(arg)) <= 0)
                 break;
               ircsprintf(numeric, "%d", nusers);
               if ((tmpc = strchr(numeric, ' ')))
